--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <div class="collapse navbar-collapse" id="navbartogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -217,9 +217,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-lg btn-dark Download-button " type="button"> <i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-lg btn-light Download-button" type="button"> <i class="fab fa-google-play"></i>
+      Download</button>
 
   </section>
 
@@ -227,8 +228,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
+    <i class="social-icon fab fa-facebook-f fa-2x"></i>
+    <i class="social-icon fab fa-twitter fa-2x"></i>
+    <i class="social-icon fab fa-instagram fa-2x"></i>
+    <i class="social-icon fas fa-envelope fa-2x"></i>
+    <p>© Copyright 2020 TinDog</p>
 
   </footer>
 
